--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dropdown_formfield: ^0.1.3
   image_picker: ^0.7.4
+  flutter_form_builder: ^3.8.3
 
 dev_dependencies:
   flutter_test:
