--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dropdown_formfield: ^0.1.3
   image_picker: ^0.7.4
   flutter_form_builder: ^3.8.3
+  stop_watch_timer: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
