--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   stop_watch_timer: ^1.1.0+1
   http: ^0.13.3
   responsive_table: ^0.1.1+8
+  simple_fontellico_progress_dialog: ^0.1.1
 
 dev_dependencies:
   flutter_test:
