--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   responsive_table: ^0.1.1+8
   shifting_tabbar: ^1.0.1
   simple_fontellico_progress_dialog: ^0.1.1
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
